--- a/src/Pages/ServicePage/ServicePage.css
+++ b/src/Pages/ServicePage/ServicePage.css
@@ -83,7 +83,7 @@
 
 .faq-details {
     /* margin: 80px 0; */
-    padding: 150px 0;
+    padding: 30px 0;
 }
 
 .service-page  .details-title {
@@ -132,41 +132,21 @@
     white-space: wrap;
     overflow: hidden;
     width: 91%;
-    height: 30px;
-
+    height: 100%;
+word-break: break-word;
     color: #170F49;
     /* background-color: red; */
 
 }
 
-.service-page .faq_text {
-    font-family: 'Clarika Geometric';
-    font-style: normal;
-    font-weight: 400;
-    font-size: 18px;
-    line-height: 30px;
  
-    text-overflow: ellipsis;
-    white-space: wrap;
-    overflow: hidden;
-    width: 90%;
-    max-height: 298.5px;
-    margin-top: 8px;
-   
-    color: #6F6C90;
-
-}
-
 
 @media(max-width:920px) {
     .container {
         width: 800px;
     }
 
-    .service-page .faq_text {
-        font-size: 15px;
-        line-height: 18px;
-    }
+ 
 
 }
 
@@ -202,38 +182,26 @@
         width: 400px;
     }
 
-    .service-page .faq_text {
-        font-size: 11px;
-        line-height: 18px;
-    }
+ 
 
 }
 
 @media(max-width:420px) {
     .container {
-        width: 300px;
-    }
-    .service-page .faq_list__item .faq_header {
+        width: 100%;
+        padding: 0px 15px;
+      }
+    /* .service-page .faq_list__item .faq_header {
         font-style: normal;
         font-weight: 500;
         font-size: 14px;
         line-height: 18px;
     
-    }
-    .faq_list__item:nth-child(3) .faq_header{
-        height: 20px;
-    }
-    .faq_list__item:nth-child(4) .faq_header{
-   
-        width: 82.4%;
-        max-height: 120px;
-        height: 36px;
-        white-space: normal;
-        word-break: break-word;
-    }
-    .service-page .faq_text {
+    } */
+ 
+    /* .service-page .faq_text {
         max-height: 486.5px;
         margin-top: 0;
-    }
+    } */
 
 }
