--- a/src/Components/Forgot/Forget.css
+++ b/src/Components/Forgot/Forget.css
@@ -1,5 +1,5 @@
 .forget-page .register, .code-forget-page .register{
-    padding-top: 180px;
+    /* padding-top: 180px; */
     height: 89.5vh;
   
 }
