--- a/src/Components/ReferToFriend/ReferToFriend.css
+++ b/src/Components/ReferToFriend/ReferToFriend.css
@@ -42,7 +42,7 @@ color: #01384D;
 
 }
 .refer-input{
-    width: 497px;
+width: 100%;
 height: 50px;
  
 padding-left: 30px;
@@ -59,22 +59,18 @@ padding-right: 153px;
 }
 .refer-btn{
     font-family: 'Clarika Geometric';
-font-style: normal;
-font-weight: 600;
-font-size: 16px;
-line-height: 32px;
-/* identical to box height, or 200% */
-
-position: absolute;
-top: 8%;
-left: 51.5%;
-
-color: #FFFFFF;
-/* Primary */
-border: none;
-padding: 5px 20px;
-background: linear-gradient(180deg, #673AB7 0%, #512DA8 100%);
-border-radius: 10px;
+    font-style: normal;
+    font-weight: 600;
+    font-size: 16px;
+    line-height: 32px;
+    position: absolute;
+    top: 8%;
+    left: 83%;
+    color: #FFFFFF;
+    border: none;
+    padding: 5px 20px;
+    background: linear-gradient(180deg, #673AB7 0%, #512DA8 100%);
+    border-radius: 10px;
 }
 
 .refer-bottom{
