--- a/src/Components/Work/Work.css
+++ b/src/Components/Work/Work.css
@@ -10,8 +10,7 @@
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  /* margin: 60px 0; */
-  padding-top: 120px;
+  
 }
 
 .work-title {
@@ -19,11 +18,9 @@
   font-weight: 900;
   font-size: 40px;
   line-height: 48px;
-
+  margin-top: 20px;
   letter-spacing: -0.011em;
-
   color: #000000;
-  /* background-color: red; */
   text-overflow: ellipsis;
   white-space: wrap;
   overflow: hidden;
@@ -53,7 +50,6 @@
   justify-content: center;
   align-items: center;
   flex-direction: column;
-
   margin: 10px;
   padding: 10px;
 }
@@ -106,7 +102,7 @@
 }
 
 .work-img {
-  height: 492px;
+  height: 100%;
   width: 245px;
   margin-left: 18px;
   object-fit: cover;
