--- a/src/Pages/FeaturePage/FeaturePage.css
+++ b/src/Pages/FeaturePage/FeaturePage.css
@@ -102,11 +102,12 @@
     animation-direction: alternate;
 }
 
-@keyframes workAn1{
-    from{
+@keyframes workAn1 {
+    from {
         transform: translateY(-30px);
     }
-    to{
+
+    to {
         transform: translateY(20px);
     }
 }
@@ -376,39 +377,37 @@
 
 @media(max-width:420px) {
     .container {
-        width: 300px;
+        width: 100%;
+        padding: 0px 15px;
     }
-
-
-
-
     .future-subtitle {
-
-        width: 255px;
-        height: 50px;
-
+        width: 100%;
+        height: 100%;
     }
 
     .future-subtext {
-        width: 251px;
-
-        height: 95.5px;
-
+        width: 100%;
+        height: 100%;
+        font-size: 18px;
+        line-height: 28px;
     }
 
     .future-text {
-        width: 251px;
-    }
+        width: 100%;
+        height: 100%;
+        font-size: 18px;
+        line-height: 28px;
+        }
 
 
     .future-subtitle {
         font-style: normal;
         font-weight: 600;
-        font-size: 22px;
-        line-height: 23px;
-
+        width: 100%;
+        height: 100%;
+        font-size: 18px;
+        line-height: 28px;
         letter-spacing: -0.011em;
-        width: 285px;
         color: #000000;
 
     }
@@ -416,39 +415,42 @@
 
     .future-subtext {
         font-weight: 400;
-        font-size: 14px;
-        line-height: 16px;
-
+        width: 100%;
+        height: 100%;
+        font-size: 18px;
+        line-height: 28px;
         text-align: center;
-
-        width: 285px;
         color: #182F43;
         margin: 2px 0;
-        width: 316px;
-
-        height: 112.5px;
+        height: 100%;
     }
 
     .future-text {
         font-weight: 400;
-        font-size: 14px;
-        line-height: 16px;
-        width: 285px;
+        width: 100%;
+        height: 100%;
+        font-size: 18px;
+        line-height: 28px;
         text-align: center;
         letter-spacing: -0.011em;
-
         color: #000000;
     }
 
-    .future-title {
+    .future-title, .future-subtitle {
+        font-weight: 800;
+        font-family: 'Clarika Geometric';
+        font-style: normal;
         font-weight: 800;
         font-size: 32px;
         line-height: 40px;
-
+margin: 0 auto;
+        margin-top: 80px;
         letter-spacing: -0.011em;
-        width: 154px;
-        height: 42.5px;
+        width: 100%;
+        height: 100%;
         color: #000000;
+        text-align: center;
+        
     }
 
     .future-top {
@@ -471,6 +473,6 @@
 
     .future-page .img-box3 {
         top: 37%;
-        left: 56.5%;
+        left: 50.5%;;
     }
 }
