--- a/src/Pages/HomePage/HomePage.css
+++ b/src/Pages/HomePage/HomePage.css
@@ -598,8 +598,8 @@
   }
 
   .footer-links {
-    font-size: 14px;
-    line-height: 17px;
+    font-size: 20px;
+    line-height: 32px;
     margin: 0 8px;
   }
 }
@@ -757,7 +757,8 @@
 
 @media (max-width: 420px) {
   .container {
-    width: 300px;
+    width: 100%;
+    padding: 0px 15px;
   }
 
   .header-title {
@@ -778,17 +779,17 @@
   }
 
   .header-text {
-    font-style: normal;
-    font-weight: 500;
-    font-size: 10px;
-    line-height: 16px;
+    width: 100%;
+    height: 100%;
+    font-size: 18px;
+    line-height: 28px;
+    font-weight: 400;
+    margin: 13px 0;
+    margin-top: 2px;
+    padding: 0;
     display: flex;
     align-items: center;
     text-align: center;
-    height: 49px;
-    margin: 13px 0;
-    margin-top: 0;
-    width: 226px;
     letter-spacing: -0.011em;
     color: rgba(0, 0, 0, 0.8);
   }
@@ -800,27 +801,28 @@
 
   .header {
     padding: 50px 0;
-    padding-top: 130px;
-    padding-bottom: 60px;
+    /* padding-bottom: 0; */
+    
   }
 
   .header-link {
     font-style: normal;
     font-weight: 500;
-    font-size: 12px;
-    line-height: 24px;
+    font-size: 18px;
+    line-height: 28px;
+    margin-top: 10px;
     color: #ffffff;
-    padding: 6px 10px;
+    padding: 6px 21px;
   }
 
   .useful-text {
-    width: 295px;
-    height: 41px;
+    width: 100%;
+    height: 100%;
+    font-size: 18px;
+    line-height: 28px;
     font-weight: 400;
-    font-size: 14px;
-    line-height: 16px;
-    /* or 114% */
-    margin: 18px 0;
+    margin: 10px 0;
+    margin-top: 2px;
     padding: 0;
     display: flex;
     align-items: center;
@@ -832,19 +834,20 @@
   .useful-title {
     font-style: normal;
     font-weight: 600;
-    font-size: 27px;
-    line-height: 32px;
+    font-size: 25px;
+    line-height: 30px;
     letter-spacing: -0.011em;
-    width: 230px;
-    height: 62px;
+    width: 239px;
+    height: 37px;
   }
 
   .useful-input {
-    width: 229px;
+    width: 100%;
   }
 
   .useful {
     margin: 38px 0;
+    padding: 0;
   }
 
   .useful-btn {
@@ -856,21 +859,30 @@
   .profile-img,
   .statistic-img,
   .people-img {
-    width: 260px;
-    height: 260px;
+    width: 100%;
+    height: 100%;
+    
   }
 
   .profile-title,
   .statistic-title,
   .people-title {
-    width: 270px;
-    height: 62px;
+    width: 100%;
+    height: 100%;
+    font-size: 26px;
+    line-height: 36px;
     font-weight: 600;
+     text-align: center;
+ 
+    margin: 15px auto;
+
+ 
     font-size: 24px;
     line-height: 30px;
-    margin: 0 auto;
-    display: flex;
+     margin-top: 40px;
+     display: flex;
     align-items: center;
+    justify-content: center;
     text-align: center;
     color: #182f43;
   }
@@ -886,6 +898,7 @@
     justify-content: flex-start;
     align-items: flex-start;
     flex-direction: column-reverse;
+    margin: 28px 0;
   }
 
   .profile .container {
@@ -904,12 +917,12 @@
   .profile-text,
   .statistic-text,
   .people-text {
-    width: 290px;
-    height: 100px;
+    width: 100%;
+    height: 100%;
+    font-size: 18px;
+    line-height: 28px;
     font-style: normal;
     font-weight: 400;
-    font-size: 12px;
-    line-height: 20px;
     margin:0 auto;
     display: flex;
     align-items: center;
@@ -920,9 +933,8 @@
   .footer {
     background-image: none;
     background: linear-gradient(180deg, #673ab7 0%, #512da8 100%);
-    /* transform: rotate(-179.57deg) */
-    border-top-left-radius: 80px;
-    border-top-right-radius: 80px;
+    border-top-left-radius: 40px;
+    border-top-right-radius: 40px;
     padding-top: 0;
   }
 
@@ -957,13 +969,13 @@
   }
 
   .img-box3 {
-    top: 37%;
-    left: 43.5%;
+    top: 39%;
+    left: 51.1%;
   }
 
   .img-box3 img {
-    width: 43px;
-    height: 43px;
+    width: 53px;
+    height: 53px;
   }
 
   .forget-page .register .register-btn {
