--- a/src/Pages/WorkPage/WorkPage.css
+++ b/src/Pages/WorkPage/WorkPage.css
@@ -101,7 +101,7 @@
     }
     .work-img{
         
-            height: 419px;
+            height: 100%;
             width: 234px;
     }
 }
@@ -207,29 +207,33 @@
         text-overflow: ellipsis;
         white-space: wrap;
         overflow: hidden;
-        width: 266px;
-        height: 46.5px;
+         width: 100%;
+        text-align: center;
+ 
+       
+        margin-left: 25px;
+         height: 46.5px;
     }
     .work-text {
-        width: 292px;
-        height: 87px;
-        line-height: 22px;
-        font-size: 13px;
+        width: 100%;
+        height:100%;
+        line-height: 28px;
+        font-size: 18px;
     }
     .work-subtitle{
-        width: 287px;
+        width: 100%;
     
         height: 26.5px;
     }
     .work-subtext {
-        font-size: 15px;
-        line-height: 21px;
+        font-size: 18px;
+        line-height: 28px;
         text-align: center;
         text-overflow: ellipsis;
         white-space: wrap;
         overflow: hidden;
-        width: 293px;
-        height: 42px;
+        width: 100%;
+        height: 100%;
     }
     .content-title {
         font-size: 25px;
@@ -239,11 +243,11 @@
         height: 60px;
     }
     .content-text {
-        width: 294px;
-        height: 42px;
+        width: 100%;
+        height: 100%;
    
-        line-height: 21px;
-        font-size: 15px;
+        line-height: 28px;
+        font-size: 18px;
         font-weight: 400;
         margin: 8px 0;
         color: #182F43;
@@ -257,5 +261,9 @@
     }
     .work-top{
         margin: 30px 0;
+    }
+    .work-list{
+        width: 100%;
+        margin: 10px 0;
     }
 }
